--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "simple-white-board": "^1.0.5",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
